Fix minor layout issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -298,7 +298,7 @@ main {
 		color: #666;
 		font-size: 12px;
 		line-height: 1.6em;
-		margin: 0 10px;
+		margin: 0 10px 10px;
 
 		&:hover {
 			text-decoration: none;
